# openapi/openapi-component_catalog-v1.0.0.yaml
@@ -224,6 +224,57 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RestErrorMessage'
+    delete:
+      tags:
+        - Project-components
+      summary: Delete the parameters of a project component given both its project key and component ID in the Bitbucket repository.
+      description: >
+        Deletes the parameters of a project component given both its project key and component ID in the Bitbucket repository.
+      operationId: deleteProjectComponentParameters
+      parameters:
+        - name: projectKey
+          in: path
+          description: project key.
+          required: true
+          schema:
+            type: string
+        - name: componentId
+          in: path
+          description: component ID.
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties:
+                type: array
+                items:
+                  type: string
+      responses:
+        "204":
+          description: Parameters deleted from the project component.
+        "401":
+          description: Invalid client token on the request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestErrorMessage'
+        "403":
+          description: Insufficient permissions for the client to access the resource.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestErrorMessage'
+        "500":
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestErrorMessage'
 
   /catalog-descriptors:
     get:
